fix header logo placement on mobile

--- a/themes/matix-io/source/css/style.scss
+++ b/themes/matix-io/source/css/style.scss
@@ -311,6 +311,7 @@ body {
 			@include header-small;
 
 			.header-left {
+        margin-left: 15px;
 				img {
 					padding: 0 5px;
 				}
